--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -12,6 +12,7 @@
   "repository": "",
   "scripts": {
     "build": "ember build",
+    "lint:js": "eslint ./*.js app config lib server tests",
     "start": "ember server",
     "test": "ember test"
   },
@@ -35,8 +36,11 @@
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
+    "ember-stylish-buttons": "0.0.17",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "eslint-plugin-ember": "^5.0.0",
+    "loader.js": "^4.2.3",
+    "semantic-ui-ember": "^2.0.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
