--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -31,16 +31,21 @@
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-concurrency": "^0.8.14",
     "ember-cp-validations": "^3.5.1",
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
+    "ember-font-awesome": "^4.0.0-rc.2",
+    "ember-light-table": "^1.12.2",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
+    "ember-responsive": "^2.0.5",
     "ember-source": "~2.16.0",
     "ember-stylish-buttons": "0.0.17",
     "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
+    "liquid-fire": "^0.29.2",
     "loader.js": "^4.2.3",
     "semantic-ui-ember": "^2.0.1"
   },
