--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -35,6 +35,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
+    "ember-simple-auth": "^1.5.1",
     "ember-source": "~2.16.0",
     "ember-stylish-buttons": "0.0.17",
     "ember-welcome-page": "^3.0.0",
