--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -27,6 +27,7 @@
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
+    "ember-cli-moment-shim": "^3.5.0",
     "ember-cli-qunit": "^4.0.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
@@ -36,6 +37,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-light-table": "^1.12.2",
     "ember-load-initializers": "^1.0.0",
+    "ember-moment": "^7.6.0",
     "ember-radio-button": "^1.2.1",
     "ember-resolver": "^4.0.0",
     "ember-responsive": "^2.0.5",
