--- a/SelfStart/SelfStartBackEnd/package.json
+++ b/SelfStart/SelfStartBackEnd/package.json
@@ -9,8 +9,12 @@
   "author": "Brigade",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^4.13.9"
+    "jsonwebtoken": "^8.2.0",
+    "mongoose": "^4.13.9",
+    "passport": "^0.4.0",
+    "passport-http-bearer": "^1.0.1"
   }
 }
