--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -40,10 +40,16 @@
     "ember-stylish-buttons": "0.0.17",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
+    "glob": "^4.5.3",
     "loader.js": "^4.2.3",
+    "morgan": "^1.9.0",
     "semantic-ui-ember": "^2.0.1"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
+  },
+  "dependencies": {
+    "ember-cli-simple-auth": "^0.8.0",
+    "ember-cli-simple-auth-token": "^0.7.3"
   }
 }
