--- a/SelfStart/SelfStartBackEnd/package.json
+++ b/SelfStart/SelfStartBackEnd/package.json
@@ -15,6 +15,7 @@
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^4.13.9",
     "passport": "^0.4.0",
-    "passport-http-bearer": "^1.0.1"
+    "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^3.0.1"
   }
 }
