--- a/SelfStart/SelfStartBackEnd/package.json
+++ b/SelfStart/SelfStartBackEnd/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.13.9",
+    "mongoose-paginate": "^5.0.3",
     "nodemon": "^1.14.11"
   }
 }
