--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.0.0",
+    "ember-calendar": "^0.5.0",
     "ember-cli": "~2.16.2",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.6.0",
@@ -37,7 +38,7 @@
     "ember-export-application-global": "^2.0.0",
     "ember-light-table": "^1.12.2",
     "ember-load-initializers": "^1.0.0",
-    "ember-moment": "^7.6.0",
+    "ember-moment": "^7.3.0",
     "ember-radio-button": "^1.2.1",
     "ember-resolver": "^4.0.0",
     "ember-responsive": "^2.0.5",
