--- a/SelfStart/SelfStartFrontEnd/bower.json
+++ b/SelfStart/SelfStartFrontEnd/bower.json
@@ -1,7 +1,6 @@
 {
   "name": "self-start-front-end",
   "dependencies": {
-    "semantic-ui": "^2.2.13",
-    "ember-simple-auth": "0.8.0"
+    "semantic-ui": "^2.2.13"
   }
 }
