--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -35,7 +35,6 @@
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
     "ember-resolver": "^4.0.0",
-    "ember-simple-auth": "^1.5.1",
     "ember-source": "~2.16.0",
     "ember-stylish-buttons": "0.0.17",
     "ember-welcome-page": "^3.0.0",
@@ -48,8 +47,5 @@
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
   },
-  "dependencies": {
-    "ember-cli-simple-auth": "^0.8.0",
-    "ember-cli-simple-auth-token": "^0.7.3"
-  }
+  "dependencies": {}
 }
