--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -35,6 +35,7 @@
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-power-select": "^2.0.0-beta.3",
     "ember-radio-button": "^1.2.1",
     "ember-resolver": "^4.0.0",
     "ember-source": "~2.16.0",
