--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -51,6 +51,7 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
+    "is-integer": "^1.0.7",
     "snapsvg": "^0.5.1",
     "ui-slider": "^2.0.0-5"
   }
