--- a/SelfStart/SelfStartBackEnd/package.json
+++ b/SelfStart/SelfStartBackEnd/package.json
@@ -14,9 +14,10 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^4.13.9",
-    "nodemailer": "^4.6.0",
+    "nodemailer": "^4.6.3",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
-    "passport-jwt": "^3.0.1"
+    "passport-jwt": "^3.0.1",
+    "xoauth2": "^1.2.0"
   }
 }
