--- a/SelfStartBackEnd/package.json
+++ b/SelfStartBackEnd/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
- 
   "author": "Brigade",
   "license": "ISC",
- 
   "dependencies": {
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^4.13.9"
+    "mongoose": "^4.13.9",
+    "nodemailer": "^4.6.3",
+    "xoauth2": "^1.2.0"
   }
 }
-
