--- a/SelfStart/SelfStartBackEnd/package.json
+++ b/SelfStart/SelfStartBackEnd/package.json
@@ -18,6 +18,8 @@
     "mongoose-paginate": "^5.0.3",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
-    "passport-jwt": "^3.0.1"
+    "passport-jwt": "^3.0.1",
+    "xoauth2": "^1.2.0",
+    "nodemailer": "^4.6.3"
   }
 }
