--- a/SelfStart/SelfStartBackEnd/package.json
+++ b/SelfStart/SelfStartBackEnd/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.2.0",
+    "moment": "^2.21.0",
     "mongoose": "^4.13.9",
     "nodemailer": "^4.6.3",
     "passport": "^0.4.0",
