--- a/SelfStart/SelfStartFrontEnd/bower.json
+++ b/SelfStart/SelfStartFrontEnd/bower.json
@@ -5,6 +5,7 @@
     "seiyria-bootstrap-slider": "~6.0.6",
     "interact": "1.2.8",
     "jquery-simulate": "1.0.1",
-    "fontawesome": "~4.7.0"
+    "fontawesome": "~4.7.0",
+    "slick-carousel": "^1.8.1"
   }
 }
