--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -33,6 +33,7 @@
     "ember-cli-shims": "^1.1.0",
     "ember-cli-slick": "^2.0.0",
     "ember-cli-sri": "^2.1.0",
+    "ember-cli-timer": "0.0.2",
     "ember-cli-uglify": "^2.0.0",
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
