--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -58,7 +58,10 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
+    "fontawesome": "^4.7.2",
+    "interact": "0.0.3",
     "is-integer": "^1.0.7",
+    "jquery-simulate": "^1.0.2",
     "ui-slider": "^2.0.0-5"
   }
 }
