--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -39,6 +39,7 @@
     "ember-cp-validations": "^3.5.1",
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
+    "ember-g-map": "0.0.25",
     "ember-load-initializers": "^1.0.0",
     "ember-moment": "^7.3.0",
     "ember-power-select": "^2.0.0-beta.3",
@@ -51,6 +52,7 @@
     "ember-truth-helpers": "^2.0.0",
     "ember-welcome-page": "^3.0.0",
     "eslint-plugin-ember": "^5.0.0",
+    "google-maps-markup": "^2.2.7",
     "liquid-fire": "^0.29.2",
     "loader.js": "^4.2.3",
     "semantic-ui-ember": "^2.0.1",
