--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -53,6 +53,7 @@
     "node": "^4.5 || 6.* || >= 7.*"
   },
   "dependencies": {
+    "crypto-browserify": "^3.12.0",
     "ember-cli-moment": "0.0.2",
     "ember-moment": "^7.6.0",
     "moment": "^2.21.0"
