--- a/SelfStart/SelfStartBackEnd/package.json
+++ b/SelfStart/SelfStartBackEnd/package.json
@@ -11,15 +11,17 @@
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "crypto-browserify": "^3.12.0",
+    "csprng": "^0.1.2",
     "express": "^4.16.2",
-    "mongoose": "^4.13.9",
-    "nodemon": "^1.14.11",
     "jsonwebtoken": "^8.2.0",
+    "mongoose": "^4.13.9",
     "mongoose-paginate": "^5.0.3",
+    "nodemailer": "^4.6.3",
+    "nodemon": "^1.14.11",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "passport-jwt": "^3.0.1",
-    "xoauth2": "^1.2.0",
-    "nodemailer": "^4.6.3"
+    "xoauth2": "^1.2.0"
   }
 }
