--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -17,6 +17,9 @@
     "test": "ember test"
   },
   "devDependencies": {
+    "crypto-browserify": "^3.11.0",
+    "browserify": "^14.4.0",
+    "ember-browserify": "^1.2.0",
     "broccoli-asset-rev": "^2.4.5",
     "ember-ajax": "^3.1.0",
     "ember-calendar": "file:ember-calendar",
