--- a/SelfStart/SelfStartFrontEnd/bower.json
+++ b/SelfStart/SelfStartFrontEnd/bower.json
@@ -6,6 +6,8 @@
     "interact": "1.2.8",
     "jquery-simulate": "1.0.1",
     "fontawesome": "~4.7.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "d3": "~3.5.3",
+    "lodash": "~3.10.0"
   }
 }
