--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -17,12 +17,13 @@
     "test": "ember test"
   },
   "devDependencies": {
-    "crypto-browserify": "^3.11.0",
-    "browserify": "^14.4.0",
-    "ember-browserify": "^1.2.0",
     "broccoli-asset-rev": "^2.7.0",
+    "browserify": "^14.4.0",
+    "crypto-browserify": "^3.11.0",
     "ember-ajax": "^3.1.0",
+    "ember-browserify": "^1.2.0",
     "ember-calendar": "file:ember-calendar",
+    "ember-charts": "^1.2.1",
     "ember-cli": "~2.16.2",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.12.0",
