--- a/SelfStart/SelfStartFrontEnd/package.json
+++ b/SelfStart/SelfStartFrontEnd/package.json
@@ -23,7 +23,6 @@
     "ember-ajax": "^3.1.0",
     "ember-browserify": "^1.2.0",
     "ember-calendar": "file:ember-calendar",
-    "ember-charts": "^1.2.1",
     "ember-cli": "~2.16.2",
     "ember-cli-app-version": "^3.0.0",
     "ember-cli-babel": "^6.12.0",
@@ -43,6 +42,7 @@
     "ember-cp-validations": "^3.5.2",
     "ember-data": "^2.18.2",
     "ember-export-application-global": "^2.0.0",
+    "ember-google-charts": "^1.5.3",
     "ember-load-initializers": "^1.0.0",
     "ember-moment": "^7.6.0",
     "ember-power-select": "^2.0.0-beta.3",
